--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.4.13",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
+    "firebase": "^10.1.0",
     "next": "13.4.13",
     "prettier": "^3.0.1",
     "react": "18.2.0",
