--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "typescript": "5.1.6"
   }
 }
