--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.4",
+    "@react-three/drei": "^9.80.3",
+    "@react-three/fiber": "^8.13.6",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@types/three": "^0.155.0",
     "dayjs": "^1.11.9",
     "eslint": "^8.47.0",
     "eslint-config-next": "13.4.13",
@@ -29,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "three": "^0.155.0",
     "typescript": "5.1.6"
   }
 }
